[package]
name = "devp2p-ffi"
version = "0.1.0"
authors = ["Paul Peregud <paulperegud@gmail.com>"]
publish = false

[dependencies]
libc = "0.2.7"
# TODO: note that parity v1.4.9 still has a network stack bug; update to newer tag ASAP
ethcore-network = { git = "https://github.com/ethcore/parity", tag = "v1.4.9" }

[lib]
path = "src/lib.rs"
crate-type = ["dylib"]
